add helper method

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,6 +4,11 @@
   <strong>Title:</strong>
   <%= @article.title %>
 </p>
+<p>
+  <strong>Short Title:</strong>
+  <%= @article.short_title %>
+  <%= @article.emphatic %>
+</p>
 
 <p>
   <strong>Body:</strong>
